--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-pdemail",
-  "version": "1.3.0",
+  "version": "1.3.4",
   "description": "PD's HTML Email Yeoman generator",
   "license": "MIT",
   "main": "app/index.js",
@@ -29,15 +29,7 @@
     "request": "~2.34.0",
     "inquirer": "~0.5.0",
     "grunt": "~0.4.2",
-    "grunt-cli": "~0.1.7",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-compass": "~0.7.2",
-    "grunt-contrib-imagemin": "~0.5.0", 
-    "grunt-contrib-clean": "~0.5.0",   
-    "grunt-premailer": "~0.2.7",
-    "grunt-litmus": "~0.1.5",
-    "grunt-text-replace": "~0.3.11"
+    "grunt-cli": "~0.1.7"
   },
   "devDependencies": {
     "mocha": "*"
