--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-pdemail",
-  "version": "1.3.4",
+  "version": "1.4.0",
   "description": "PD's HTML Email Yeoman generator",
   "license": "MIT",
   "main": "app/index.js",
@@ -27,9 +27,7 @@
     "chalk": "~0.4.0",
     "yosay": "^0.1.0",
     "request": "~2.34.0",
-    "inquirer": "~0.5.0",
-    "grunt": "~0.4.2",
-    "grunt-cli": "~0.1.7"
+    "inquirer": "~0.5.0"
   },
   "devDependencies": {
     "mocha": "*"
